# fdupl_finder

./: .clang-format  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: fdupl.h  hasher.h  i_hasher.h  i_reader.h  i_wpool.h  reader.h  types.h
lib/src/: fdupl.cpp  hasher.cpp  reader.cpp
tests/: CMakeLists.txt  fdupl_tests.cpp
tests/fixtures/2samefiles/: file2.txt
tests/fixtures/recur_dirs/: file3.txt  file4.txt
tests/fixtures/recur_dirs/samefiles/: file1.txt
